@startuml

title __FILM's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace model.media {
      namespace film {
        interface com.unisa.cinehub.model.media.film.FilmRepository {
            {abstract} + existsByTitleAnnoUscita()
            {abstract} + findFilmByTitle()
        }
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.media {
      namespace film {
        class com.unisa.cinehub.model.media.film.FilmService {
            {static} - logger : Logger
            + FilmService()
            + addCast()
            + addFilm()
            + addGeneri()
            + findMostRecentFilm()
            + mergeFilm()
            + removeFilm()
            + retrieveAll()
            + retrieveByKey()
            + searchByGenere()
            + searchByTitle()
        }
      }
    }
  }
  

  com.unisa.cinehub.model.media.film.FilmService o-- com.unisa.cinehub.model.media.film.FilmRepository : filmRepository
  com.unisa.cinehub.model.media.film.FilmService o-- com.unisa.cinehub.model.media.GenereRepository : genereRepository
  com.unisa.cinehub.model.media.film.FilmService o-- com.unisa.cinehub.model.utente.UtenteRepository : utenteRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
